# randomStringChecksum

./: CMakeLists.txt  README.md  main.cpp
headers/: ServerConnection.h  common.h  sha1.h
source/: ServerConnection.cpp  sha1.c
